style(reqtran) fix awkward cell content alignment

--- a/app/_assets/stylesheets/page.less
+++ b/app/_assets/stylesheets/page.less
@@ -362,6 +362,7 @@
     th, td {
       .font-source-sans();
       font-size: 14px;
+      vertical-align: top;
     }
 
     th {
@@ -378,7 +379,7 @@
     td {
       padding: 10px;
       &:first-child {
-        text-align: right;
+        // text-align: right;
         white-space: nowrap;
 
         code {
